# InfiniTAM

./: CMakeLists.txt  Dockerfile  build-win.sh  docker-compose.yml  docker-entrypoint.sh
Apps/InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp
InputSource/: CMakeLists.txt  TCPImageSourceEngine.cpp  TCPImageSourceEngine.h
ServerUtils/: CMakeLists.txt  TCPImageServer.cpp  TCPImageServer.h  TCPServer.cpp  TCPServer.h
